crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__form_asked_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Auth method · Library · Targets                                              │"
"│   GET  /authorize?client_id=…                                                │"
"│   302  /callback?code=…                                                      │"
"│   POST /token                                                                │"
"│                                                                              │"
"│ Which authentication method?                                                 │"
"│ ❯ 1. OAuth                                                                   │"
"│      Redirect to the provider                                                │"
"│   2. API key                                                                 │"
"│      A key in the header                                                     │"
"│   3. Other                                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
