crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__form_in_ascii.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 47
expression: "in_look(ascii(), || draw_tree(80, 24, tree, ui, now))"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"--------------------------------------------------------------------------------"
"←  - Auth method  - Library  - Targets  x Submit  →                             "
"Which authentication method?                                                    "
"+-----------------------------+                                                 "
"| GET  /authorize?client_id=… |                                                 "
"| 302  /callback?code=…       |                                                 "
"| POST /token                 |                                                 "
"+-----------------------------+                                                 "
"> 1. OAuth                                                                      "
"  2. API key                                                                    "
"  3. Type something.                                                            "
"--------------------------------------------------------------------------------"
"  4. Chat about this                                                            "
"Enter to select · ↑/↓ to navigate · Tab to switch questions · Esc to cancel     "
"+------------------------------------------------------------------------------+"
"| > ask anything · / for commands · ! for shell                                |"
"+------------------------------------------------------------------------------+"
"? for shortcuts                                                      fake/fake-1"
