crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__form_layout_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 40
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"←  ☐ Layout  ☐ Library  ☐ Targets  ✔ Submit  →                                                                          "
"Where should the sidebar sit?                                                                                           "
"❯ 1. Sidebar left     ╭────────────────────────╮                                                                        "
"  2. Sidebar right    │ ┌──────┬─────────────┐ │                                                                        "
"  3. No sidebar       │ │ nav  │ content     │ │                                                                        "
"  4. Type something.  │ │      │             │ │                                                                        "
"                      │ └──────┴─────────────┘ │                                                                        "
"                      ╰────────────────────────╯                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"  5. Chat about this                                                                                                    "
"Enter to select · ↑/↓ to navigate · Tab to switch questions · Esc to cancel                                             "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                              fake/fake-1"
