crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__form_part_answered_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ☒ Auth method · ☒ Library · Targets                                          │"
"│                                                                              │"
"│ Which targets should the release build?                                      │"
"│ ❯ 1. ☒ linux                                                                 │"
"│   2. ☐ macos                                                                 │"
"│   3. ☐ windows                                                               │"
"│   4. Other                                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
