crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__form_set_ticked_and_typed_on_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"←  ☐ Auth method  ☐ Library  ☐ Targets  ✔ Submit  →                             "
"Which targets should the release build?                                         "
"  1. [✔] linux                                                                  "
"  2. [✔] macos                                                                  "
"  3. [ ] windows                                                                "
"❯ 4. Type something.                                                            "
"     > and freebsd                                                              "
"────────────────────────────────────────────────────────────────────────────────"
"  5. Chat about this                                                            "
"Enter to select · Space to toggle · ↑/↓ to navigate · Tab to switch questions · "
"Esc to cancel                                                                   "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
