crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__form_submit_with_one_left_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 39
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"────────────────────────────────────────────────────────────────────────────────"
"←  ☒ Auth method  ☒ Library  ☐ Targets  ✔ Submit  →                             "
"1 question is still open.                                                       "
"❯ 1. Submit                                                                     "
"────────────────────────────────────────────────────────────────────────────────"
"  2. Chat about this                                                            "
"Enter to select · ↑/↓ to navigate · Tab to switch questions · Esc to cancel     "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
